Email is now functional where it was before (still not really doing anything with the idUser_From.

--- a/RCPub/rc_1.css
+++ b/RCPub/rc_1.css
@@ -397,6 +397,16 @@ a.big_link
 	margin:6px 0px;
 }
 
+/*******************
+*** EMAIL STYLES ***
+*******************/
+
+div#content a.elink_unread,
+div#content a:visited.elink_unread
+{
+	font-weight: bold;
+}
+
 
 
 /********************
