--- a/RCPub/rc_1.css
+++ b/RCPub/rc_1.css
@@ -456,19 +456,10 @@ div.image_block
 {
 	display:block;
 	padding:0;
-	margin:.25em 5px 0em 5px;
+	margin:0;
 	border:0;
 	text-align:left;
 	font-size:75%;
-	color:#fff;
-	background-color:#000;
-}
-
-div.image_block p
-{
-	margin:0;
-	border:0;
-	padding:.25em .75em;
 }
 
 div.image_block a img
@@ -476,6 +467,15 @@ div.image_block a img
 	border:0;
 	margin:0;
 	padding:0;
+}
+
+div.image_caption
+{
+	margin:0;
+	border:0;
+	padding:.25em .75em;
+	color:#fff;
+	background-color:#000;
 }
 
 div.b2evo{
