--- a/RCPub/skins/roughconcept/rcskin.css
+++ b/RCPub/skins/roughconcept/rcskin.css
@@ -113,14 +113,14 @@ div#menu_main a
 	text-decoration:none;
 	font-weight:bold;
 	font-size:8pt;
-	background:#f5f5f5 url('images/menu_button_u.png') no-repeat center center;
+	background:#f5f5f5 url('menu_button_u.png') no-repeat center center;
 }
 
 div#menu_main a:hover
 {
 	color: black;
 	text-decoration:none;
-	background:#f5f5f5 url('images/menu_button_d.png') no-repeat center center;
+	background:#f5f5f5 url('menu_button_d.png') no-repeat center center;
 }
 
 /**********************
@@ -239,7 +239,7 @@ div#content h1
 	text-align: center;
 	border:     0px solid black;
 	background-color:#707070;
-	background: #707070 url('images/h1_bottom.png') repeat-x left bottom;
+	background: #707070 url('h1_bottom.png') repeat-x left bottom;
 	color:#eee;
 }
 
@@ -248,7 +248,7 @@ div#content h2
 	padding: 2px 3px 2px;
 	border: 0px solid black;
 	color: white;
-	background: #707070 url('images/h1_top_black.png') repeat-x left top;
+	background: #707070 url('h1_top_black.png') repeat-x left top;
 	font-size: 175%;
 	line-height:105%;
 }
