--- a/RCPub/skins/roughconcept/rcskin.css
+++ b/RCPub/skins/roughconcept/rcskin.css
@@ -34,14 +34,14 @@ body, #wrapper, #header
 
 #wrapper
 {
-	width:800px;
+	width:1000px;
 	margin: 10px auto;
 	padding: 0;
 }
 
-#header
+div#header
 {
-
+        margin-bottom:-5px;
 }
 
 
@@ -72,7 +72,7 @@ div#menu_main p
 div#menu_main a
 {
 	color: #000;
-	width: 6em;
+	width: 8em;
 	border: 0;
 	border-right:0px solid #000;
 	display:inline-block;
@@ -82,15 +82,17 @@ div#menu_main a
 	font:normal normal normal 8pt/100% Arial;
 	text-decoration:none;
 	font-weight:bold;
-	font-size:8pt;
-	background:#f5f5f5 url('menu_button_u.png') no-repeat center center;
+	font-size:12pt;
+	background:#f5f5f5 url('menu_button_u.png') no-repeat left top;
+        background-size:100%;
 }
 
 div#menu_main a:hover
 {
 	color: black;
 	text-decoration:none;
-	background:#f5f5f5 url('menu_button_d.png') no-repeat center center;
+	background:#f5f5f5 url('menu_button_d.png') no-repeat left top;
+        background-size:100%;
 }
 
 /**********************
@@ -107,7 +109,7 @@ div#menu_sub
 
 div#menu_sub a{
 	font: normal normal normal 10pt/100% Arial;
-	margin: 0 2px;
+	margin: 0 5px;
 	text-decoration: none;
 	color: #000;
 }
@@ -126,7 +128,6 @@ twitter_update_list a
 /*****************************
 *** CONTENT SECTION STYLES ***
 *****************************/
-
 div#content
 {
 	border:0;
@@ -134,7 +135,7 @@ div#content
 	padding:0;
 	border: black solid 1px;
 	padding:10px;
-	width:778px;
+	width:auto;
 }
 
 
