--- a/RCPub/skins/roughconcept/rcskin.css
+++ b/RCPub/skins/roughconcept/rcskin.css
@@ -505,3 +505,10 @@ div#comment_block p.date
 	color:gray;
 	text-align:right;
 }
+
+span.leave_comment_header
+{
+	display:inline-block;
+	width:5em;
+	font-weight:bold;
+}
