--- a/RCPub/skins/roughconcept/rcskin.css
+++ b/RCPub/skins/roughconcept/rcskin.css
@@ -122,31 +122,41 @@ twitter_update_list a
 /*****************************
 *** CONTENT SECTION STYLES ***
 *****************************/
+
+div#content_header
+{
+	border:0;
+	margin:0;
+	padding:0;
+	background-color:white;
+}
+
 div#content
 {
 	border:0;
 	margin:0;
 	padding:0;
-	border: black solid 1px;
 	padding:10px;
 	width:auto;
 }
 
 
 div#content a,
-div#content a:visited
+div#content a:visited,
+div#content_header a
 {
 	text-decoration: none;
-	font-weight:normal;
 	color:#aa0000;
 }
 
-div#content a:visited
+div#content a:visited,
+div#content_header a:visited
 {
 	color:#880000;
 }
 
-div#content a:hover
+div#content a:hover,
+div#content_header a:hover
 {
 	text-decoration: underline;
 }
@@ -196,15 +206,19 @@ div#content h1, h2, h3, h4
 	font-weight: bold;
 }
 
-div#content h1
+div#content h1, div#content_header h1
 {
 	margin: 0px;
-	padding:8px 0px 18px 0px;
+	padding:18px 0px 18px 0px;
 	font-size:  200%;
 	text-align: center;
 	border:     0px solid black;
-	background: #707070;
-	background:linear-gradient(180deg,#707070,#707070,#707070,#707070,#FFFFFF);
+	background: #000;
+	background:linear-gradient(180deg,#777,#777,#000,#000,#000);
+	border:0px solid #444;
+	border-top:0;
+	border-bottom-left-radius:5px;
+	border-bottom-right-radius:5px;
 	color:#eee;
 }
 
