--- a/RCPub/skins/roughconcept/rcskin.css
+++ b/RCPub/skins/roughconcept/rcskin.css
@@ -1,6 +1,6 @@
 /* User Option DIV */
 /* Get rid of all margins as they seem to make a mess: */
-#header, #content, #memu_main, #menu_sub, #wrapper, .news, #toc_list, #page_buttons
+#rc_header, #rc_content, #rc_memu_main, #rc_menu_sub, #rc_wrapper, .news, #toc_list, #page_buttons
 {
 	margin:0;
 	padding:0;
@@ -9,7 +9,7 @@
 
 
 /* First thing we need is sections for the format of the website. */
-#header, #content, #menu_main, #footer, #wrapper
+#rc_header, #rc_content, #rc_menu_main, #rc_footer, #rc_wrapper
 {
 	width:100%;
 	display:block;
@@ -25,8 +25,7 @@ html {
   overflow-y: scroll;
 }
 
-
-body, #wrapper, #header
+body, #rc_wrapper, #rc_header
 {
 	margin:0px;
 	border:0px;
@@ -36,14 +35,22 @@ body, #wrapper, #header
 	background-image:url('rcbodybg.jpg');
 }
 
-#wrapper
+hr 
+{
+	height: 0;
+	border: 0;
+	border-top: 1px solid #78a;
+}
+
+
+#rc_wrapper
 {
 	width:900px;
 	margin: 10px auto;
 	padding: 0;
 }
 
-div#header
+div#rc_header
 {
 	margin-bottom:-4px;
 }
@@ -53,7 +60,7 @@ div#header
 *** MAIN MENU STYLES ***
 ***********************/
 
-#menu_main
+#rc_menu_main
 {
 	left:  0px;
 	top:   0px;
@@ -68,7 +75,7 @@ div#header
 	text-align: center;
 }
 
-div#menu_main a
+div#rc_menu_main a
 {
 	color: #FFF;
 	width: 7em;
@@ -92,7 +99,7 @@ div#menu_main a
 	background:linear-gradient(to bottom,#707070,#000000);
 }
 
-div#menu_main a:hover
+div#rc_menu_main a:hover
 {
 	text-decoration:none;
 	background-color:#000000;
@@ -108,7 +115,7 @@ div#menu_main a:hover
 *** SUB MENU STYLES ***
 **********************/
 
-div#menu_sub
+div#rc_menu_sub
 {
 	background-color: #ddd;
 	margin: 0;
@@ -116,14 +123,16 @@ div#menu_sub
 	border: 0;
 }
 
-div#menu_sub a{
+div#rc_menu_sub a
+{
 	font: normal normal normal 10pt/100% Arial;
 	margin: 0 5px;
 	text-decoration: none;
 	color: #000;
 }
 
-div#menu_sub a:hover{
+div#rc_menu_sub a:hover
+{
 	text-decoration: underline;
 }
 
@@ -146,7 +155,7 @@ div#content_header
 	background-color:white;
 }
 
-div#content
+div#rc_content
 {
 	border:0;
 	margin:0;
@@ -155,38 +164,43 @@ div#content
 	width:auto;
 }
 
+/*
+** Basic Link Styles
+*/
 
-div#content a,
-div#content a:visited,
-div#content_header a
+a
 {
 	text-decoration: none;
 	color:#aa0000;
 }
 
-div#content a:visited,
-div#content_header a:visited
+a:visited
 {
 	color:#880000;
 }
 
-div#content a:hover,
-div#content_header a:hover
+a:hover
 {
 	text-decoration: underline;
 }
 
-div#content a.tlink
+/*
+** Header Link Styles
+*/
+
+div#rc_content h2 a
 {
 	font:inherit;
-	color: white;
+	text-decoration:none;
+	color:white;
 }
-div#content a.tlink:hover
+div#rc_content h2 a:hover
 {
+	font:inherit;
 	text-decoration:underline;
 }
 
-div#content p
+div#rc_content p
 {
 	margin:0;
 	border:0;
@@ -194,7 +208,7 @@ div#content p
 	margin-bottom:.5em;
 }
 
-div#content table
+div#rc_content table
 {
 	width:  100%;
 	border: 0px outset gray;
@@ -204,8 +218,8 @@ div#content table
 	margin:0px;
 }
 
-div#content td,
-div#content th
+div#rc_content td,
+div#rc_content th
 {
 	text-align:left;
 	padding: 0px;
@@ -214,14 +228,14 @@ div#content th
 	vertical-align:top;
 }
 
-div#content h1, h2, h3, h4
+div#rc_content h1, h2, h3, h4
 {
 	margin:  0px;
 	padding: 0px;
 	font-weight: bold;
 }
 
-div#content h1, div#content_header h1
+div#rc_content h1, div#content_header h1
 {
 	margin: 0px;
 	padding:18px 0px 18px 0px;
@@ -241,7 +255,7 @@ div#content h1, div#content_header h1
 	color:#eee;
 }
 
-div#content h2
+div#rc_content h2
 {
 	padding: 2px .5em 2px;
 	border: 3px solid #101010;
@@ -258,7 +272,7 @@ div#content h2
 	box-shadow: 5px 5px 5px #555555;
 }
 
-div#content h3
+div#rc_content h3
 {
 	padding: 2px;
 	border:     0px solid #707070;
@@ -266,13 +280,13 @@ div#content h3
 	line-height:105%;
 }
 
-div#content h4
+div#rc_content h4
 {
 	font-size: 100%;
 	margin-top:.10em;
 }
 
-div#content ul
+div#rc_content ul
 {
 	margin:1em;
 	border:0;
@@ -313,7 +327,7 @@ div.news_body
 /****************************
 *** HOME PAGE DIV SEGMENT ***
 ****************************/
-div.home_seg
+div.rc_column
 {
 	padding:0;
 	display:inline-block;
@@ -333,8 +347,8 @@ a.big_link
 *** EMAIL STYLES ***
 *******************/
 
-div#content a.elink_unread,
-div#content a:visited.elink_unread
+div#rc_content a.elink_unread,
+div#rc_content a:visited.elink_unread
 {
 	font-weight: bold;
 }
@@ -346,7 +360,7 @@ div#content a:visited.elink_unread
 ********************/
 
 
-div#footer
+div#rc_footer
 {
 	margin:0em 0;
 	padding:0em;
@@ -354,23 +368,23 @@ div#footer
 	color:#777777;
 }
 
-div#footer a
+div#rc_footer a
 {
 	color:#666666;
 	text-decoration:none;
 }
 
-div#footer a:hover
+div#rc_footer a:hover
 {
 	text-decoration:underline;
 }
 
-div#footer hr
+div#rc_footer hr
 {
 	margin: 0em 12%;
 }
 
-div#footer p
+div#rc_footer p
 {
 	padding:0em 0;
 	margin:0em 20% 1em 20%;
