[rcpub] Fix RC skin background color.

--- a/RCPub/skins/roughconcept/rcskin.css
+++ b/RCPub/skins/roughconcept/rcskin.css
@@ -30,7 +30,7 @@ body, #rc_wrapper, #rc_header
 	margin:0px;
 	border:0px;
 	padding:0;
-	background-color:#7bcff7;
+	background-color:#0b1326;
 	font:normal normal normal 12pt/120% Times;
 	background-image:url('rcbodybg.jpg');
 }
